# termdot

./: .gitignore  Cargo.toml  README.md
addons/termdot/: README.md  libshell.dylib  termdot.gdextension
benchmark/: Cargo.toml
benchmark/benches/: emulation_bench.rs
builtin/: Cargo.toml
builtin/src/: command.rs  lib.rs  termdot.rs
common/: Cargo.toml
common/src/: constants.rs  escape_sequence.rs  lib.rs  log.rs  typedef.rs
ipc/: Cargo.toml
ipc/src/: ipc_channel.rs  ipc_context.rs  ipc_event.rs  lib.rs
ipc/src/register_info/: mod.rs  register_list.rs
pty/: Cargo.toml
pty/src/: termdot_pty.rs
shell/: Cargo.toml  build.rs
shell/src/: lib.rs  plugin.rs  session.rs  shell.rs  termdot.rs
shell/src/command/: execute_status.rs  mod.rs
shell/src/command/internal/: cls.rs  log.rs  mod.rs  version.rs
shell/src/consoel_captures/: mod.rs
shell/src/utils/: ansi_string.rs  charmap.rs  color256.rs  log.rs  mod.rs
shell/src/utils/ansi_string/: godot.rs  mod.rs  rust.rs
src/: assets.rs  log4rs.yaml  main.rs
src/components/: app.rs  color_table.rs  mod.rs  session_bar.rs  session_tab.rs  title_bar.rs  win_ctl_buttons.rs
src/components/sessions/: mod.rs  new_tab_button.rs  session_bar.rs  session_tab.rs
src/components/sessions/dropdown_list/: mod.rs  select_option.rs
src/config/: font_helper.rs  mod.rs
src/event_bus/: event_handle.rs  events.rs  mod.rs
src/events/: mod.rs
src/pty/: mod.rs  termdot_pty.rs
src/resources/themes/: builtin_themes.json
src/session/: mod.rs
