[workspace]
members = ["shell", "ipc", "benchmark"]

[package]
name = "termdot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "termdot"
path = "src/main.rs"

[workspace.dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tmui = { git = "https://github.com/toocol/tmui" }
termio = { git = "https://github.com/toocol/termio" }

ipc = { path = "ipc/" }

log = "0.4"
log4rs = "1.1.1"
lazy_static = "1.5.0"
ahash = "0.8.11"
wchar = "0.11.0"
widestring = "1.0.2"
derivative = "2.2.0"
rand = "0.9.0"
rust-embed = { version = "8.3.0", features = [
    "debug-embed",
    "include-exclude",
] }
strum = "0.26.3"
strum_macros = "0.26.3"
parking_lot = "0.12.3"

[dependencies]
tmui = { workspace = true }
termio = { workspace = true }
ipc = { workspace = true }
log4rs = { workspace = true }
rust-embed = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
strip = true
