[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }
termio = { workspace = true }
rand = { workspace = true }
widestring = { workspace = true }
wchar = { workspace = true }
criterion = "0.4.0"

[[bench]]
name = "emulation_bench"
harness = false
