[package]
name = "shell"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { workspace = true }
termio = { workspace = true }
tmui = { workspace = true }
ipc = { workspace = true }
ahash = { workspace = true }
wchar = { workspace = true }
widestring = { workspace = true }
derivative = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
