[package]
name = "shell"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cfg_aliases = "0.2.0"

[dependencies]
godot = { workspace = true }
termio = { workspace = true }
tmui = { workspace = true }
ipc = { workspace = true }
ahash = { workspace = true }
wchar = { workspace = true }
widestring = { workspace = true }
derivative = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
common = { workspace = true }
