[package]
name = "shell"
version = "0.0.1"
edition = "2024"

build = "build.rs"

[features]
default = []
x11 = ["ipc/x11", "tmui/x11"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cfg_aliases = "0.2.0"

[dependencies]
tmui = { git = "https://github.com/toocol/tmui" }
godot = { workspace = true }
termio = { workspace = true }
ipc = { workspace = true }
ahash = { workspace = true }
wchar = { workspace = true }
widestring = { workspace = true }
derivative = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
common = { workspace = true }
